# Rubix-Cube-Algorithms

./: .gitmodules  CMakeLists.txt  Makefile  README.md  main.cpp  main.h  test.cpp
Images/: icon.rc  icon.res
cube/: NxN.h  cube.h
cube_class/: CMakeLists.txt  cube.h  cube_2x2.cpp  cube_2x2.h  cube_3x3.cpp  cube_3x3.h  cube_4x4.cpp  cube_4x4.h  cube_5x5.cpp  cube_5x5.h  cube_common.cpp  cube_common.h
cube_mode/: CMakeLists.txt  algorithm_image.cpp  algorithm_image.h
cube_modes/: cube.h
src/Classes_and_Functions/: NxN.h  SDL_CLasses.h  SDL_Classes.cpp  SDL_Functions.h  cube.h
src/include/SDL2/: SDL_rect.h
src/utilities/: SDL_CLasses.h  SDL_Util.h
utilities/SDL2/: SDL_Util.h
